--- a/RawTools/RawTools.csproj
+++ b/RawTools/RawTools.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>RawTools</RootNamespace>
     <AssemblyName>RawTools</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
@@ -85,8 +85,8 @@
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CLParserForNetFramework">
-      <HintPath>..\..\rawtoolsDevPackages\CLParserForNetFramework\CLParserForNetFramework\bin\Release\CLParserForNetFramework.dll</HintPath>
+    <Reference Include="CommandLine, Version=2.9.1.0, Culture=neutral, PublicKeyToken=5a870481e358d379, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.2.9.1\lib\net461\CommandLine.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="OpenMcdf, Version=2.2.1.9, Culture=neutral, PublicKeyToken=fdbb1629d7c00800, processorArchitecture=MSIL">
@@ -131,17 +131,17 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="ThermoFisher.CommonCore.BackgroundSubtraction, Version=5.0.0.71, Culture=neutral, PublicKeyToken=1aef06afb5abd953, processorArchitecture=MSIL">
-      <HintPath>..\packages\ThermoFisher.CommonCore.BackgroundSubtraction.5.0.0.71\lib\netstandard2.0\ThermoFisher.CommonCore.BackgroundSubtraction.dll</HintPath>
+    <Reference Include="ThermoFisher.CommonCore.BackgroundSubtraction">
+      <HintPath>..\lib\ThermoFisher.CommonCore.BackgroundSubtraction.dll</HintPath>
     </Reference>
-    <Reference Include="ThermoFisher.CommonCore.Data, Version=5.0.0.71, Culture=neutral, PublicKeyToken=1aef06afb5abd953, processorArchitecture=MSIL">
-      <HintPath>..\packages\ThermoFisher.CommonCore.Data.5.0.0.71\lib\netstandard2.0\ThermoFisher.CommonCore.Data.dll</HintPath>
+    <Reference Include="ThermoFisher.CommonCore.Data">
+      <HintPath>..\lib\ThermoFisher.CommonCore.Data.dll</HintPath>
     </Reference>
-    <Reference Include="ThermoFisher.CommonCore.MassPrecisionEstimator, Version=5.0.0.71, Culture=neutral, PublicKeyToken=1aef06afb5abd953, processorArchitecture=MSIL">
-      <HintPath>..\packages\ThermoFisher.CommonCore.MassPrecisionEstimator.5.0.0.71\lib\netstandard2.0\ThermoFisher.CommonCore.MassPrecisionEstimator.dll</HintPath>
+    <Reference Include="ThermoFisher.CommonCore.MassPrecisionEstimator">
+      <HintPath>..\lib\ThermoFisher.CommonCore.MassPrecisionEstimator.dll</HintPath>
     </Reference>
-    <Reference Include="ThermoFisher.CommonCore.RawFileReader, Version=5.0.0.71, Culture=neutral, PublicKeyToken=1aef06afb5abd953, processorArchitecture=MSIL">
-      <HintPath>..\packages\ThermoFisher.CommonCore.RawFileReader.5.0.0.71\lib\netstandard2.0\ThermoFisher.CommonCore.RawFileReader.dll</HintPath>
+    <Reference Include="ThermoFisher.CommonCore.RawFileReader">
+      <HintPath>..\lib\ThermoFisher.CommonCore.RawFileReader.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
