--- a/RawTools/packages.config
+++ b/RawTools/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="2.9.1" targetFramework="net48" />
   <package id="OpenMcdf" version="2.2.1.9" targetFramework="net462" />
   <package id="OpenMcdf.Extensions" version="2.2.1.4" targetFramework="net462" />
   <package id="OxyPlot.Core" version="1.0.0" targetFramework="net462" />
@@ -10,8 +11,4 @@
   <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net462" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
-  <package id="ThermoFisher.CommonCore.BackgroundSubtraction" version="5.0.0.71" targetFramework="net462" />
-  <package id="ThermoFisher.CommonCore.Data" version="5.0.0.71" targetFramework="net462" />
-  <package id="ThermoFisher.CommonCore.MassPrecisionEstimator" version="5.0.0.71" targetFramework="net462" />
-  <package id="ThermoFisher.CommonCore.RawFileReader" version="5.0.0.71" targetFramework="net462" />
 </packages>
